fix cart bug on small screen

--- a/src/index.css
+++ b/src/index.css
@@ -104,3 +104,35 @@ body {
   min-height: calc(100vh - 10rem);
   padding: 5rem 0;
 }
+
+/* cartbag style */
+.cart-btn,
+.small-cart-btn {
+  font-size: 1.5rem;
+  display: flex;
+  align-items: center;
+  position: relative;
+  width: 30px;
+  height: 30px;
+}
+
+.bag-icon {
+  font-size: 1.8rem;
+  color: var(--main-clr);
+}
+
+.cart-value {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background: var(--main-clr);
+  color: var(--white-clr);
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  font-size: 0.75rem;
+  padding: 12px;
+}
